--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
   ext.versions = [
       'minSdk': 14,
       'compileSdk': 27,
-      'kotlin': '1.5.21',
+      'kotlin': '1.5.31',
       'lint': '26.0.1'
   ]
 
@@ -38,6 +38,7 @@ ext {
 
   // Third-party dependencies.
   kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
+  kotlinCoroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
   dagger = 'com.google.dagger:dagger:2.13'
   daggerCompiler = 'com.google.dagger:dagger-compiler:2.13'
   butterKnifeRuntime = 'com.jakewharton:butterknife:8.8.1'
@@ -45,9 +46,6 @@ ext {
   timber = 'com.jakewharton.timber:timber:4.6.0'
   autoValue = 'com.google.auto.value:auto-value:1.5'
   autoValueParcel = 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
-  rxJava = 'io.reactivex.rxjava2:rxjava:2.1.3'
-  rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.0.1'
-  rxBinding = 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
   junit = 'junit:junit:4.12'
   truth = 'com.google.truth:truth:0.36'
 
