--- a/sqlbrite/build.gradle
+++ b/sqlbrite/build.gradle
@@ -1,13 +1,18 @@
 apply plugin: 'com.android.library'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 dependencies {
-  api rootProject.ext.rxJava
+  api rootProject.ext.kotlinStdLib
+  api rootProject.ext.kotlinCoroutines
   api rootProject.ext.supportSqlite
   implementation rootProject.ext.supportAnnotations
 
+  androidTestImplementation 'app.cash.turbine:turbine:0.7.0'
+  androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2'
   androidTestImplementation rootProject.ext.supportTestRunner
   androidTestImplementation rootProject.ext.truth
   androidTestImplementation rootProject.ext.supportSqliteFramework
+
 
   lintChecks project(':sqlbrite-lint')
 }
@@ -29,6 +34,12 @@ android {
   lintOptions {
     textOutput 'stdout'
     textReport true
+  }
+
+  packagingOptions {
+    exclude 'META-INF/AL2.0'
+    exclude 'META-INF/ASL2.0'
+    exclude 'META-INF/LGPL2.1'
   }
 
   // TODO replace with https://issuetracker.google.com/issues/72050365 once released.
