--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 GROUP=com.squareup.sqlbrite3
 VERSION_NAME=3.2.1-SNAPSHOT
+android.useAndroidX=true
 
 POM_DESCRIPTION=A lightweight wrapper around SQLiteOpenHelper which introduces reactive stream semantics to SQL operations.
 
