--- a/sqlbrite/build.gradle
+++ b/sqlbrite/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 
   androidTestImplementation 'app.cash.turbine:turbine:0.7.0'
   androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2'
+  androidTestImplementation 'androidx.test:rules:1.4.0'
   androidTestImplementation rootProject.ext.supportTestRunner
   androidTestImplementation rootProject.ext.truth
   androidTestImplementation rootProject.ext.supportSqliteFramework
