--- a/sqlkite/build.gradle
+++ b/sqlkite/build.gradle
@@ -31,19 +31,19 @@ android {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
+    packagingOptions {
+        resources {
+            excludes += ['META-INF/AL2.0', 'META-INF/ASL2.0', 'META-INF/LGPL2.1']
+        }
+    }
 
-  lintOptions {
-    textOutput 'stdout'
-    textReport true
-  }
 
-  packagingOptions {
-    exclude 'META-INF/AL2.0'
-    exclude 'META-INF/ASL2.0'
-    exclude 'META-INF/LGPL2.1'
-  }
+    lint {
+        textOutput file('stdout')
+        textReport true
+    }
 
-  // TODO replace with https://issuetracker.google.com/issues/72050365 once released.
+    // TODO replace with https://issuetracker.google.com/issues/72050365 once released.
   libraryVariants.all {
     it.generateBuildConfig.enabled = false
   }
