Changes to accomodate new build release

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
-GROUP=com.squareup.sqlbrite3
-VERSION_NAME=3.2.1-SNAPSHOT
+GROUP=com.frank-egan.sqlkite
+VERSION_NAME=4.0
 android.useAndroidX=true
 
-POM_DESCRIPTION=A lightweight wrapper around SQLiteOpenHelper which introduces reactive stream semantics to SQL operations.
+POM_DESCRIPTION=A lightweight Kotlin Flow based library that makes working with SQLiteOpenHelper a breeze.
 
-POM_URL=http://github.com/square/sqlbrite/
-POM_SCM_URL=http://github.com/square/sqlbrite/
-POM_SCM_CONNECTION=scm:git:git://github.com/square/sqlbrite.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/square/sqlbrite.git
+POM_URL=https://github.com/fegan104/sqlkite
+POM_SCM_URL=https://github.com/fegan104/sqlkite
+POM_SCM_CONNECTION=scm:git:git://github.com/fegan104/sqlkite.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/fegan104/sqlkite.git
 
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 
-POM_DEVELOPER_ID=square
-POM_DEVELOPER_NAME=Square, Inc.
+POM_DEVELOPER_ID=frankegan
+POM_DEVELOPER_NAME=Frank Egan
