--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -6,6 +6,16 @@ plugins {
   id 'kotlin-parcelize'
 }
 
+// Create a variable called keystorePropertiesFile, and initialize it to your
+// keystore.properties file, in the rootProject folder.
+def keystorePropertiesFile = rootProject.file('keystore.properties')
+
+// Initialize a new Properties() object called keystoreProperties.
+def keystoreProperties = new Properties()
+
+// Load your keystore.properties file into the keystoreProperties object.
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 dependencies {
   implementation rootProject.ext.supportAnnotations
   implementation rootProject.ext.viewModel
@@ -39,11 +49,13 @@ android {
   }
 
   signingConfigs {
-    debug {
-      storeFile file('debug.keystore')
-      storePassword 'android'
-      keyAlias 'android'
-      keyPassword 'android'
+    signingConfigs {
+      release {
+        keyAlias keystoreProperties['keyAlias']
+        keyPassword keystoreProperties['keyPassword']
+        storeFile file(System.getProperty("user.home") + keystoreProperties['storeFile'])
+        storePassword keystoreProperties['storePassword']
+      }
     }
   }
 
