Prepare for release 4.0.0.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-GROUP=com.frank-egan.sqlkite
-VERSION_NAME=4.0
+GROUP=com.frank-egan
+VERSION_NAME=4.0.0
 android.useAndroidX=true
 
 POM_DESCRIPTION=A lightweight Kotlin Flow based library that makes working with SQLiteOpenHelper a breeze.
 
 POM_URL=https://github.com/fegan104/sqlkite
-POM_SCM_URL=https://github.com/fegan104/sqlkite
+POM_SCM_URL=https://github.com/fegan104/sqlkite.git
 POM_SCM_CONNECTION=scm:git:git://github.com/fegan104/sqlkite.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/fegan104/sqlkite.git
 
