--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -30,52 +30,69 @@ def getRepositoryPassword() {
 }
 
 afterEvaluate { project ->
-//    uploadArchives {
-//        repositories {
-//            mavenDeployer {
-////                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-//
-//                pom.groupId = GROUP
-//                pom.artifactId = POM_ARTIFACT_ID
-//                pom.version = VERSION_NAME
-//
-//                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-//                    authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
-//                }
-//                snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-//                    authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
-//                }
-//
-//                pom.project {
-//                    name POM_NAME
-//                    packaging POM_PACKAGING
-//                    description POM_DESCRIPTION
-//                    url POM_URL
-//
-//                    scm {
-//                        url POM_SCM_URL
-//                        connection POM_SCM_CONNECTION
-//                        developerConnection POM_SCM_DEV_CONNECTION
-//                    }
-//
-//                    licenses {
-//                        license {
-//                            name POM_LICENCE_NAME
-//                            url POM_LICENCE_URL
-//                            distribution POM_LICENCE_DIST
-//                        }
-//                    }
-//
-//                    developers {
-//                        developer {
-//                            id POM_DEVELOPER_ID
-//                            name POM_DEVELOPER_NAME
-//                        }
-//                    }
-//                }
-//            }
-//        }
-//    }
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+//                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+                groupId = GROUP
+                artifactId = POM_ARTIFACT_ID
+                version = VERSION_NAME
+
+                repositories {
+                    maven {
+                        url "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+                        credentials {
+                            username getRepositoryUsername()
+                            password getRepositoryPassword()
+                        }
+                        mavenContent {
+                            releasesOnly()
+                        }
+                    }
+
+                    maven {
+                        url "https://oss.sonatype.org/content/repositories/snapshots/"
+                        credentials {
+                            username getRepositoryUsername()
+                            password getRepositoryPassword()
+                        }
+                        mavenContent {
+                            snapshotsOnly()
+                        }
+                    }
+                }
+
+                pom {
+                    name = POM_NAME
+                    packaging = POM_PACKAGING
+                    description = POM_DESCRIPTION
+                    url = POM_URL
+
+                    scm {
+                        url = POM_SCM_URL
+                        connection = POM_SCM_CONNECTION
+                        developerConnection = POM_SCM_DEV_CONNECTION
+                    }
+
+                    licenses {
+                        license {
+                            name = POM_LICENCE_NAME
+                            url = POM_LICENCE_URL
+                            distribution = POM_LICENCE_DIST
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id = POM_DEVELOPER_ID
+                            name = POM_DEVELOPER_NAME
+                        }
+                    }
+                }
+            }
+        }
+    }
 
     signing {
         required { isReleaseBuild() && gradle.taskGraph.hasTask("uploadArchives") }
