Prepare for release 4.0.1.

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
   repositories {
     mavenCentral()
     google()
+    maven { url "https://jitpack.io" }
   }
 
   dependencies {
@@ -64,31 +65,14 @@ configurations {
 dependencies {
   osstrich 'com.squareup.osstrich:osstrich:1.2.0'
 }
-task publishV1Javadoc(type: JavaExec) {
+
+task publishV4Javadoc(type: JavaExec) {
   classpath = configurations.osstrich
   main = 'com.squareup.osstrich.JavadocPublisher'
   args = [
       'build/javadoc',
-      'https://github.com/square/sqlbrite',
-      'com.squareup.sqlbrite'
+      'https://github.com/fegan104/sqlkite',
+      'com.frankegan.sqlkite'
   ]
 }
-task publishV2Javadoc(type: JavaExec) {
-  classpath = configurations.osstrich
-  main = 'com.squareup.osstrich.JavadocPublisher'
-  args = [
-      'build/javadoc',
-      'https://github.com/square/sqlbrite',
-      'com.squareup.sqlbrite2'
-  ]
-}
-task publishV3Javadoc(type: JavaExec) {
-  classpath = configurations.osstrich
-  main = 'com.squareup.osstrich.JavadocPublisher'
-  args = [
-      'build/javadoc',
-      'https://github.com/square/sqlbrite',
-      'com.squareup.sqlbrite3'
-  ]
-}
-task publishJavadoc(dependsOn: [publishV1Javadoc, publishV2Javadoc, publishV3Javadoc])
+task publishJavadoc(dependsOn: [publishV4Javadoc])
