Prepare for release 4.0.4.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
-GROUP=com.frank-egan
-VERSION_NAME=4.0.3
 android.useAndroidX=true
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2048m
+
+GROUP=com.frank-egan
+VERSION_NAME=4.0.4
 
 POM_DESCRIPTION=A lightweight Kotlin Flow based library that makes working with SQLiteOpenHelper a breeze.
 
