--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
     classpath 'com.android.tools.build:gradle:7.1.2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
     classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+    classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.6.10"
   }
 }
 
@@ -25,19 +26,18 @@ allprojects {
     google()
   }
 
-  group = GROUP
   version = VERSION_NAME
 }
 
 ext {
   // Android dependencies.
   supportV4 = 'com.android.support:support-v4:27.0.0'
-  supportAnnotations = 'com.android.support:support-annotations:27.0.0'
-  supportTestRunner = 'com.android.support.test:runner:0.5'
+  supportAnnotations = 'androidx.annotation:annotation:1.3.0'
+  supportTestRunner = 'androidx.test:runner:1.4.0'
   fragmentKtx = 'androidx.fragment:fragment-ktx:1.4.0'
 
-  supportSqlite = 'android.arch.persistence:db:1.0.0'
-  supportSqliteFramework = 'android.arch.persistence:db-framework:1.0.0'
+  supportSqlite = 'androidx.sqlite:sqlite-ktx:2.2.0'
+  supportSqliteFramework = 'androidx.sqlite:sqlite-framework:2.2.0'
 
   // Third-party dependencies.
   kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
@@ -58,21 +58,3 @@ ext {
   lint = "com.android.tools.lint:lint:${versions.lint}"
   lintTests = "com.android.tools.lint:lint-tests:${versions.lint}"
 }
-
-configurations {
-  osstrich
-}
-dependencies {
-  osstrich 'com.squareup.osstrich:osstrich:1.2.0'
-}
-
-task publishV4Javadoc(type: JavaExec) {
-  classpath = configurations.osstrich
-  main = 'com.squareup.osstrich.JavadocPublisher'
-  args = [
-      'build/javadoc',
-      'https://github.com/fegan104/sqlkite',
-      'com.frankegan.sqlkite'
-  ]
-}
-task publishJavadoc(dependsOn: [publishV4Javadoc])
