--- a/sqlkite/build.gradle
+++ b/sqlkite/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 
     androidTestImplementation 'app.cash.turbine:turbine:0.7.0'
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2'
+    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation rootProject.ext.supportTestRunner
     androidTestImplementation rootProject.ext.truth
@@ -25,7 +26,7 @@ android {
     defaultConfig {
         minSdkVersion versions.minSdk
 
-        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     compileOptions {
