Prepare for release 4.0.7

--- a/sqlkite/build.gradle
+++ b/sqlkite/build.gradle
@@ -50,7 +50,6 @@ android {
 
     publishing {
         singleVariant('release') {
-            version = VERSION_NAME
             withSourcesJar()
             withJavadocJar()
         }
@@ -58,5 +57,18 @@ android {
 
     buildFeatures {
         buildConfig = false
+    }
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = "com.github.fegan104"
+                artifactId = "sqlkite"
+                version = VERSION_NAME
+            }
+        }
     }
 }
