Added dokka config to set output dir

--- a/sqlkite/build.gradle
+++ b/sqlkite/build.gradle
@@ -54,6 +54,10 @@ android {
     }
 }
 
+tasks.named("dokkaHtml") {
+    outputDirectory.set(new File(rootDir.path + "/docs/"))
+}
+
 afterEvaluate {
     publishing {
         publications {
