Updated gradle script to use env vars

--- a/sqlkite/build.gradle
+++ b/sqlkite/build.gradle
@@ -108,8 +108,8 @@ afterEvaluate {
                 name = "OSSRH"
                 url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
                 credentials {
-                    username = project.properties["ossrhUsername"]
-                    password = project.properties["ossrhPassword"]
+                    username = System.getenv("MAVEN_USERNAME")
+                    password = System.getenv("MAVEN_PASSWORD")
                 }
             }
         }
