--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -37,7 +37,7 @@ jobs:
             publish
             -Psigning.keyId=${{secrets.OSSRH_GPG_SECRET_KEY_ID}}
             -Psigning.password='${{secrets.OSSRH_GPG_SECRET_KEY_PASSWORD}}'
-            -Psigning.secretKeyRingFile=$(echo ~/.gradle/secring.gpg) --warn --stacktrace
+            -Psigning.secretKeyRingFile=~/.gradle/secring.gpg --warn --stacktrace
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
