--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -34,8 +34,8 @@ jobs:
         with:
           arguments: |
             publish
-            -Psigning.gnupg.keyName=${{secrets.OSSRH_GPG_SECRET_KEY_ID}}
-            -Psigning.passphrase='${{secrets.OSSRH_GPG_SECRET_KEY_PASSWORD}}'
+            -Psigning.gnupg.keyName=EE866757
+            -Psigning.passphrase='${{secrets.GPG_PASSPHRASE}}'
             -Psigning.gnupg.executable=gpg --warn --stacktrace
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
