boack to th eold ways

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -28,15 +28,21 @@ jobs:
         name: Install GPG secret key
         run: |
           cat <(echo -e "${{ secrets.GPG_PRIVATE_KEY }}") | gpg --batch --import
+          gpg --export-secret-keys > ~/.gradle/secring.gpg
+
+      - id: set-secret-key-path-var
+        name: Set the secret key path env var
+        run: |
+          echo "SECRET_KEY_RING_PATH=$(echo ~/.gradle/secring.gpg)" >> $GITHUB_ENV
 
       - name: Publish package
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: |
             publish
-            -Psigning.gnupg.keyName=EE866757
-            -Psigning.gnupg.passphrase='${{secrets.GPG_PASSPHRASE}}'
-            -Psigning.gnupg.executable=gpg --warn --stacktrace
+            -Psigning.keyId=${{secrets.OSSRH_GPG_SECRET_KEY_ID}}
+            -Psigning.password='${{secrets.OSSRH_GPG_SECRET_KEY_PASSWORD}}'
+            -Psigning.secretKeyRingFile=${{env.SECRET_KEY_RING_PATH}} --warn --stacktrace
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
