--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -28,12 +28,12 @@ jobs:
         name: Install GPG secret key
         run: |
           cat <(echo -e "${{ secrets.GPG_PRIVATE_KEY }}") | gpg --batch --import
-          gpg --export-secret-keys > ~/.gradle/secring.gpg
+          gpg --export-secret-keys > ~/.gnupg/secring.gpg
 
       - id: set-secret-key-path-var
         name: Set the secret key path env var
         run: |
-          echo "SECRET_KEY_RING_PATH=$(echo ~/.gradle/secring.gpg)" >> $GITHUB_ENV
+          echo "SECRET_KEY_RING_PATH=$(echo ~/.gnupg/secring.gpg)" >> $GITHUB_ENV
 
       - name: Publish package
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
