--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -27,9 +27,8 @@ jobs:
       - id: install-secret-key
         name: Install GPG secret key
         run: |
-          cat <(echo -e "${{ secrets.GPG_PRIVATE_KEY }}") | gpg --batch --import
-          echo "no-tty" > ~/.gnupg/gpg.conf
-          gpg --export-secret-keys --pinentry-mode loopback > ~/.gnupg/secring.gpg
+          cat <(echo -e "${{ secrets.GPG_PRIVATE_KEY }}") | gpg --batch --import --pinentry-mode loopback
+          gpg --export-secret-keys --no-tty --pinentry-mode loopback > ~/.gnupg/secring.gpg
 
       - id: set-secret-key-path-var
         name: Set the secret key path env var
