--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           arguments: |
             publish
-            -Psigning.keyId=${{secrets.GPG_PRIVATE_KEY}}
+            -Psigning.keyId='${{secrets.GPG_PRIVATE_KEY}}'
             -Psigning.password='${{secrets.GPG_PASSPHRASE}}'
             -Psigning.secretKeyRingFile=${{env.SECRET_KEY_RING_PATH}} --warn --stacktrace
         env:
