--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -41,6 +41,7 @@ jobs:
           arguments: |
             publish
             -Psigning.keyId='${{secrets.GPG_PRIVATE_KEY}}'
+            -Psigning.gnupg.keyName=EE866757
             -Psigning.password='${{secrets.GPG_PASSPHRASE}}'
             -Psigning.secretKeyRingFile=${{env.SECRET_KEY_RING_PATH}} --warn --stacktrace
         env:
