--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -40,8 +40,8 @@ jobs:
         with:
           arguments: |
             publish
-            -Psigning.keyId='${{secrets.GPG_PRIVATE_KEY}}'
-            -Psigning.gnupg.keyName='${{secrets.GPG_PRIVATE_KEY}}'
+            -Psigning.keyId=EE866757
+            -Psigning.gnupg.keyName=EE866757
             -Psigning.gnupg.passphrase='${{secrets.GPG_PASSPHRASE}}'
             -Psigning.password='${{secrets.GPG_PASSPHRASE}}'
             -Psigning.secretKeyRingFile=${{env.SECRET_KEY_RING_PATH}} --warn --stacktrace
