--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -27,13 +27,14 @@ jobs:
       - id: install-secret-key
         name: Install GPG secret key
         run: |
-          cat <(echo -e "${{ secrets.GPG_PRIVATE_KEY }}") | gpg --pinentry-mode=loopback --batch --import
-          gpg --export-secret-keys --pinentry-mode=loopback --passphrase ${{secrets.GPG_PASSPHRASE}} > ~/.gnupg/secring.gpg
+          mkdir -p ~/.gradle/
+          echo "${{secrets.GPG_PRIVATE_KEY}}" > ~/.gradle/secring.gpg.b64
+          base64 -d ~/.gradle/secring.gpg.b64 > ~/.gradle/secring.gpg
 
       - id: set-secret-key-path-var
         name: Set the secret key path env var
         run: |
-          echo "SECRET_KEY_RING_PATH=$(echo ~/.gnupg/secring.gpg)" >> $GITHUB_ENV
+          echo "SECRET_KEY_RING_PATH=$(echo ~/.gradle/secring.gpg)" >> $GITHUB_ENV
 
       - name: Publish package
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
@@ -41,8 +42,6 @@ jobs:
           arguments: |
             publish
             -Psigning.keyId=EE866757
-            -Psigning.gnupg.keyName=EE866757
-            -Psigning.gnupg.passphrase='${{secrets.GPG_PASSPHRASE}}'
             -Psigning.password='${{secrets.GPG_PASSPHRASE}}'
             -Psigning.secretKeyRingFile=${{env.SECRET_KEY_RING_PATH}} --warn --stacktrace
         env:
