--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -29,6 +29,8 @@ jobs:
         run: |
           cat <(echo -e "${{ secrets.GPG_PRIVATE_KEY }}") | gpg --pinentry-mode=loopback --batch --import
           gpg --keyring secring.gpg --export-secret-keys --pinentry-mode=loopback --passphrase ${{secrets.GPG_PASSPHRASE}} > ~/.gnupg/secring.gpg
+          md5 ~/.gnupg/secring.gpg
+          echo md5sum ~/.gnupg/secring.gpg
 
       - id: set-secret-key-path-var
         name: Set the secret key path env var
